--- a/Resources/administration/src/app/component/base/sw-tabs-item/sw-tabs-item.html.twig
+++ b/Resources/administration/src/app/component/base/sw-tabs-item/sw-tabs-item.html.twig
@@ -1,17 +1,13 @@
-{% block sw_tabs_item %}
-    {% block sw_tabs_item_router_link %}
-        <router-link v-if="route" class="sw-tabs-item" :class="tabsItemClasses" :to="route">
-            {% block sw_tabs_item_router_link_label %}
-                <slot>{% block sw_tabs_item_router_link_slot_default %}{% endblock %}</slot>
-            {% endblock %}
-        </router-link>
-    {% endblock %}
+{% block sw_side_navigation_item %}
+    <a class="sw-tabs-item" :class="tabsItemClasses" v-if="isNative" @click="clickEvent">
+        {% block sw_tabs_item_slot %}
+            <slot></slot>
+        {% endblock %}
+    </a>
 
-    {% block sw_tabs_item_button %}
-        <button v-else class="sw-tabs-item" :class="tabsItemClasses" v-on="$listeners" @click="activate">
-            {% block sw_tabs_item_button_label %}
-                <slot>{% block sw_tabs_item_button_slot_default %}{% endblock %}</slot>
-            {% endblock %}
-        </button>
-    {% endblock %}
+    <router-link v-else :class="tabsItemClasses" ref="sw-tabs-item" v-bind="$attrs" class="sw-tabs-item" @click.native="clickEvent" :to="route">
+        {% block sw_tabs_item_slot_native %}
+            <slot></slot>
+        {% endblock %}
+    </router-link>
 {% endblock %}
