--- a/Resources/administration/src/app/component/base/sw-tabs/sw-tabs.scss
+++ b/Resources/administration/src/app/component/base/sw-tabs/sw-tabs.scss
@@ -1,76 +1,121 @@
 @import "~scss/variables";
 
-$sw-tabs-background-color:       $color-light-gray;
-$sw-tabs-border-radius:          $border-radius-default;
-$sw-tabs-color-border:           $color-steam-cloud;
-$sw-tabs-arrow-color-background: $color-light-gray;
-$sw-tabs-font-size:               14px;
-$sw-tabs-arrow-color-icon:       lighten($color-gutenberg, 20%);
+$sw-tabs-color: $color-shopware-blue;
+$sw-side-navigation-item-link-color: $color-gutenberg;
 
 .sw-tabs {
+    position: relative;
 
-    .sw-tabs__bar {
+    .sw-tabs__content {
         position: relative;
-        display: block;
-        padding: 0;
-        max-width: 800px;
-        margin: 0 auto 40px auto;
-        height: 48px;
-        background-color: $sw-tabs-background-color;
-        border-radius: $sw-tabs-border-radius;
-        border: 1px solid $sw-tabs-color-border;
+        display: flex;
+        overflow: scroll;
+        scroll-behavior: smooth;
 
-        &.sw-tabs__bar-minimal {
-            font-size: 0;
-            background: none;
-            border: none;
-            border-radius: 0;
-            border-bottom: 2px solid $sw-tabs-color-border;
+        &::-webkit-scrollbar {
+            display: none;
         }
 
-        .sw-tabs__arrow {
-            width: 30px;
-            line-height: 46px;
-            padding: 0;
+        &::before {
+            content: "";
+            display: block;
             position: absolute;
             bottom: 0;
-            background-color: transparent;
-            color: $sw-tabs-arrow-color-icon;
-            text-align: center;
-            cursor: pointer;
-            outline: none;
-            border: 0 none;
-
-            &:hover {
-                color: darken($sw-tabs-arrow-color-icon, 10%);
-            }
+            width: 100%;
+            height: 2px;
+            background-color: lighten($sw-side-navigation-item-link-color, 45);
         }
+    }
 
-        .sw-tabs__arrow--left {
-            left: 0;
-        }
+    .sw-tabs__slider {
+         transform-origin: top left;
+         transition: 0.2s all ease-in-out;
+         position: absolute;
+         bottom: 0px;
+         height: 2px;
+         background-color: $sw-tabs-color;
+    }
 
-        .sw-tabs__arrow--right {
+    .sw-tabs__arrow {
+        transition: 0.3s all ease-in-out;
+        position: absolute;
+        left: 0;
+        top: 21px;
+        transform: translate(0, -50%);
+        border: none;
+        background-color: transparent;
+
+        &.sw-tabs__arrow--right {
+            left: auto;
             right: 0;
         }
 
-        .sw-tabs__container {
-            margin-left: 30px;
-            margin-right: 30px;
-            overflow: hidden;
+        &.sw-tabs__arrow--disabled {
+            cursor: default !important;
+            opacity: 0.25;
         }
 
-        .sw-tabs__navigation {
-            position: relative;
-            overflow-x: scroll;
-            overflow-y: hidden;
-            white-space: nowrap;
-            -ms-overflow-style: none;
-            -webkit-overflow-scrolling: touch;
+        .sw-icon {
+            transition: 0.3s all ease;
+        }
 
-            &::-webkit-scrollbar {
-                display: none;
+        &:focus {
+            outline: none;
+        }
+
+        &:hover {
+            outline: none;
+            cursor: pointer;
+
+            .sw-icon {
+                color: $sw-tabs-color;
             }
         }
     }
+
+    .sw-tabs__custom-Content {
+        padding: 20px 0;
+    }
+
+
+    &.sw-tabs--vertical {
+        .sw-tabs__content {
+            flex-direction: column;
+
+            .sw-tabs__slider {
+                bottom: auto;
+                top: 0;
+                left: 2px;
+            }
+
+            &::before {
+                display: none;
+            }
+        }
+
+        &.sw-tabs--align-right {
+            .sw-tabs__content {
+                .sw-tabs-item {
+                    text-align: right;
+                }
+
+                .sw-tabs__slider {
+                    transform-origin: bottom right;
+                    left: auto;
+                    right: 0px;
+                    top: -2px;
+                }
+            }
+        }
+    }
+
+    &.sw-tabs--small {
+        max-width: 800px;
+        margin: 0px auto 15px auto;
+    }
+
+    &.sw-tabs--scrollable {
+        padding: 0 20px;
+    }
+
 }
