--- a/Resources/administration/src/app/component/media/sw-media-modal-move/sw-media-modal-move.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-move/sw-media-modal-move.html.twig
@@ -62,7 +62,8 @@
                     <sw-button class="sw-media-modal-move__confirm"
                                @click="moveSelection"
                                size="small"
-                               variant="primary">
+                               variant="primary"
+                               :disabled="isMoveDisabled">
                         {{ $tc('global.sw-media-modal-move.buttonMove') }}
                     </sw-button>
                 {% endblock %}
