--- a/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
@@ -19,20 +19,28 @@
 
         {% block sw_order_detail_actions %}
             <template slot="smart-bar-actions">
-                {% block sw_order_detail_actions_abort %}
-                    <sw-button v-if="isEditing" :disabled="order.isLoading" @click ="onCancelEditing">
-                        {{ $tc('sw-order.detail.buttonCancel') }}
-                    </sw-button>
-                {% endblock %}
 
-                {% block sw_order_detail_actions_save %}
-                    <sw-button v-if="isEditing" variant="primary"  :disabled="order.isLoading" @click ="onSave">
+                <sw-button-group splitButton v-if="isEditing" :disabled="order.isLoading">
+                    {% block sw_order_detail_actions_save %}
+                    <sw-button variant="primary" @click ="onSave" style="margin-right: 0">
                         {{ $tc('sw-order.detail.buttonSave') }}
                     </sw-button>
-                {% endblock %}
+                    {% endblock %}
 
-                <sw-button v-if="!isEditing" :disabled="order.isLoading" square @click="onStartEditing">
-                    <sw-icon name="default-documentation-paper-pencil" small></sw-icon>
+                    <sw-context-button>
+
+                        <sw-button square slot="button" variant="primary" class="sw-media-upload__button-context-menu">
+                            <sw-icon name="small-arrow-medium-down" size="16"></sw-icon>
+                        </sw-button>
+
+                        <sw-context-menu-item @click ="onCancelEditing">
+                            {{ $tc('sw-order.detail.buttonCancel') }}
+                        </sw-context-menu-item>
+                    </sw-context-button>
+                </sw-button-group>
+
+                <sw-button v-if="!isEditing" :disabled="order.isLoading" variant="primary" @click="onStartEditing">
+                    {{ $tc('sw-order.detail.buttonEdit') }}
                 </sw-button>
 
             </template>
