--- a/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.scss
+++ b/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.scss
@@ -12,25 +12,28 @@ $sw-order-detail-base-select-status-delivery-link: #23BE2F;
         grid-template-areas: 'empty summary'
     }
 
-    .sw-description-list {
-        line-height: 15px;
+    .sw-order-detail-base__summary-vertical
+    {
+      line-height: 15px;
 
-        dt,
-        dd {
-            padding: 4px;
-            border-bottom: none;
+      dt,
+      dd {
+        padding: 4px;
+        border-bottom: none;
+          /*&:not(:first-of-type){
+              padding-top: 21px;
+          }*/
+      }
 
-            &:last-of-type {
-                border-bottom-color: transparent;
-            }
+      dt {
+        font-weight: 600;
+        color: $color-kashmir;
+        //padding-top: 21px;
+        &:not(:first-child), &:only-of-type{
+          padding-top: 21px;
         }
 
-        dt {
-            font-weight: 600;
-            color: $color-kashmir;
-            padding-top: 21px;
-        }
-
+      }
     }
 
     .sw-description-list, .sw-alert {
@@ -76,23 +79,6 @@ $sw-order-detail-base-select-status-delivery-link: #23BE2F;
                 left: 80px;
             }
         }
-    }
-
-    .sw-order-detail-base__user-summary-data {
-        padding: 0;
-
-        dt {
-            padding-top: 0;
-            padding-bottom: 0;
-            line-height: 25px;
-            font-size: 18px;
-        }
-        dd {
-            padding-top: 0;
-            line-height: 22px;
-            font-size: 14px;
-        }
-
     }
 
     .sw-order-detail-base__line-item-grid-card .sw-card__content {
