NEXT-1894 - Add media upload for admin user avatar; Refactor sw-avatar component

--- a/Resources/administration/src/app/component/base/sw-user-card/sw-user-card.html.twig
+++ b/Resources/administration/src/app/component/base/sw-user-card/sw-user-card.html.twig
@@ -13,7 +13,8 @@
                                 {% block sw_user_card_avatar %}
                                     <sw-avatar :color="moduleColor"
                                                size="80px"
-                                               :user="user"
+                                               :firstName="user.firstName"
+                                               :lastName="user.lastName"
                                                :isLoading="isLoading">
                                     </sw-avatar>
                                 {% endblock %}
