NEXT-1630 - Rebuild upload store

--- a/Resources/administration/src/app/component/structure/sw-admin/sw-admin.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin/sw-admin.html.twig
@@ -1,4 +1,5 @@
 <div id="app">
     <sw-notifications ref="notifications"></sw-notifications>
+    <sw-duplicated-media></sw-duplicated-media>
     <router-view></router-view>
 </div>
