--- a/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
@@ -4,11 +4,15 @@
               :title="$tc('global.sw-media-modal-replace.titleModal')"
               @closeModal="emitCloseReplaceModal">
 
+        <sw-upload-store-listener
+            :uploadTag="itemToReplace.id"
+            @sw-media-upload-added="onNewUpload">
+        </sw-upload-store-listener>
         <sw-media-replace
             class="sw-media-modal-replace__upload"
             :itemToReplace="itemToReplace"
-            variant="regular"
-            @sw-media-upload-new-uploads-added="onNewUpload">
+            :uploadTag="itemToReplace.id"
+            variant="regular">
         </sw-media-replace>
 
         {% block sw_media_modal_replace_modal_footer %}
