--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -52,9 +52,7 @@
                     <sw-media-upload
                         variant="compact"
                         :targetFolderId="routeFolderId"
-                        @sw-media-upload-new-uploads-added="onUploadsAdded"
-                        @sw-media-upload-media-upload-failure="onUploadFailed"
-                        @sw-media-upload-media-upload-success="onUploadFinished">
+                        :uploadTag="uploadTag">
                     </sw-media-upload>
                 {% endblock %}
             </template>
@@ -67,8 +65,14 @@
         {% endblock %}
 
         {% block sw_media_index_page_content %}
-            <div slot="content"class="sw-media-index__page-content">
+            <div slot="content" class="sw-media-index__page-content">
                 {% block sw_media_index_listing_grid %}
+                    <sw-upload-store-listener
+                        :uploadTag="uploadTag"
+                        @sw-media-upload-added="onUploadsAdded"
+                        @sw-media-upload-finished="onUploadFinished"
+                        @sw-media-upload-failed="onUploadFailed">
+                    </sw-upload-store-listener>
                     <sw-media-library
                         class="sw-media-index__media-library"
                         :folderId="routeFolderId"
